# fct_qt_driver_plugin_db

./: CMakeLists.txt  QSqlCipher.json  README.md  basedados.db  database.cfg  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qsql_ciphersqlite.cpp  qsql_ciphersqlite.h  qsql_ciphersqlite.json  qsql_ciphersqlite_driver.cpp  qsql_ciphersqlite_driver.h  qsql_sqlite.cpp  qsql_sqlite_p.h  qsqlcipherdriver.cpp  qsqlcipherdriver.h  smain.cpp  sqlcipherdbdriver.cpp  sqlcipherdbdriver.h  sqlcipherdbplugin.cpp  sqlcipherdbplugin.h  sqlcipherdriver.cpp  sqlcipherdriver.h
build-novaTentativaDriver-Desktop_Qt_6_5_1_GCC_64bit-Debug/: CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-novaTentativaDriver-Desktop_Qt_6_5_1_GCC_64bit-Debug/novaTentativaDriver_autogen/: deps  moc_predefs.h
build-novaTentativaDriver-Desktop_Qt_6_5_1_GCC_64bit-Debug/novaTentativaDriver_autogen/include/: moc_qsql_sqlite_p.cpp  moc_qsql_sqlite_p.cpp.d  smain.moc  smain.moc.d
